--- a/public/css/privacy_policy.css
+++ b/public/css/privacy_policy.css
@@ -1,12 +1,15 @@
 .privacy_policy_main_box{
     width: 70%;
-    margin:1em auto;
+    margin:5em auto;
     padding:1.5em;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: #ffffff;
+    background-color: var(--CardBackground2);
+}
+.privacy_policy_main_box h4{
+    color:var(--CardTextDarkColor);
 }
 .disclaimer{
     margin:1em 0;
@@ -21,16 +24,18 @@
     gap: 1em;
     justify-content: center;
     align-items: center; 
+    color:var(--CardTextMediumColor);
 }
 .privacy-policy-head-intro{ 
     font-size: 1.1em;
-    margin:1em 0;   
+    margin:1em 0;  
+    color:var(--CardTextMediumColor); 
 }
 .privacy-policy-detail{
     font-size: 0.93em;
     letter-spacing: 0.02em;
     font-weight: 100;
-    color: #212121;
+    color: var(--CardTextDarkColor);
 }
 .privacy-policy-detail a{
     color:#0073ff;
