--- a/public/css/watchProduct.css
+++ b/public/css/watchProduct.css
@@ -1,4 +1,5 @@
 .watch_product_container{
+    margin-top:3em;
     min-width: 100vw;
     width:100%;
     min-height: 40em;
@@ -235,7 +236,7 @@
     border-radius: 50%;
     margin-right:1em;
     cursor: pointer;
-    border:0.01em solid rgba(0, 0, 0, 0.256);
+    border:0.01em solid var(--md_blackText);
     overflow: hidden;
 }
 .wtc-product-colorBox div img{
