--- a/public/css/user_profile.css
+++ b/public/css/user_profile.css
@@ -65,7 +65,7 @@
    justify-content: space-between;
    align-items: flex-start;
    padding:1em;
-   border:0.1em solid rgb(225, 225, 225);
+   border:1px solid rgb(225, 225, 225);
    border-radius: 1em;
    background-color: var(--CardBackground2);
    box-shadow: var(--card_shadow) 0px 1px 30px -10px;
