--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -41,8 +41,8 @@
       <div class="registerBox"><a href="/shopcard/authenticate/logout"><button class="registerBtn">Logout</button> </a> </div> 
     <% } %>
     <% if(!currentUser){ %>
-      <div class="registerBox"><a href="/shopcard/authenticate/register"> <button class="registerBtn">Register</button> </a> </div>   
-      <div class="LoginBox"> <a href="/shopcard/authenticate/register"> <button class="LoginBtn">Login</button> </a> </div> 
+      <div class="registerBox"><a href="/shopcard/authenticate/register?action=register"> <button class="registerBtn">Register</button> </a> </div>   
+      <div class="LoginBox"> <a href="/shopcard/authenticate/register?action=login"> <button class="LoginBtn">Login</button> </a> </div> 
     <% } %>        
     </div>
     <!-- For Small Screen Sidebar -->
@@ -55,8 +55,8 @@
       <div class="registerBox"><a href="/shopcard/authenticate/logout"><button class="registerBtn">logout</button> </a> </div> 
       <% } %>
       <% if(!currentUser) { %>
-      <div class="registerBox small_scr_rgtBtn"> <a href="/shopcard/authenticate/register"> <button class="registerBtn"> Register </button> </a> </div>   
-      <div class="LoginBox"> <a href="/shopcard/authenticate/login"><button class="LoginBtn"> Login</button> </a> </div> 
+      <div class="registerBox small_scr_rgtBtn"> <a href="/shopcard/authenticate/register?action=register"> <button class="registerBtn"> Register </button> </a> </div>   
+      <div class="LoginBox"> <a href="/shopcard/authenticate/login?action=login"><button class="LoginBtn"> Login</button> </a> </div> 
       <% } %>
     </div>
     </div> 
