--- a/view/listings/search.ejs
+++ b/view/listings/search.ejs
@@ -174,7 +174,7 @@
           <%} %> 
         </div>
     </div>
-    <script src="/javascript/search.js"></script>
+    <script type="module" src="/javascript/search.js"></script>
 </body> 
 
 
