--- a/public/css/search.css
+++ b/public/css/search.css
@@ -111,6 +111,7 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
+  color:var(--CardTextMediumColor);
   visibility: hidden;
   transition: all 0.3s ease;
 }
