--- a/view/listings/buy.ejs
+++ b/view/listings/buy.ejs
@@ -152,7 +152,4 @@
     </div><!--buy_route_order_container End Here-->
     </div>   
 </div>
-<script  src="/javascript/buyProduct.js"></script>
-
-
-
+<script type="module"  src="/javascript/buyProduct.js"></script>
