--- a/view/listings/buy.ejs
+++ b/view/listings/buy.ejs
@@ -56,7 +56,7 @@
             </div>
              <!--Permanent Address -->
              <div class="buy_product_permanent_address_box">
-                <p class="buy_product_permanent_addrees_para"> Permanent Address <sup style="color:#0080ff;">*</sup></p>
+                <p style="color: var(--CardTextMediumColor);" class="buy_product_permanent_addrees_para"> Permanent Address <sup style="color:#0080ff;">*</sup></p>
                 <input type="text" placeholder="Type here.." >
                 <p class="buy_product_form_invalid_msg" data-aos="fade-up" data-aos-duration="300" >Permanent address is required!</p>
              </div>
@@ -118,6 +118,12 @@
             <div>
                 <input type="radio" id="credit_card_debit_card" class="payment_method" name="payment_method">
                 <label for="credit_card_debit_card">Credit or Debit card </label>
+            </div>
+            <div class="buy_route_payment_methods_imageBox">
+                <img src="https://cdn.iconscout.com/icon/free/png-256/free-upi-logo-icon-download-in-svg-png-gif-file-formats--unified-payments-interface-payment-money-transfer-logos-icons-1747946.png?f=webp" alt="">
+                <img src="https://image.similarpng.com/file/similarpng/very-thumbnail/2020/06/Logo-google-pay-vector-PNG.png" alt="">
+                <img src="https://cdn4.iconfinder.com/data/icons/flat-brand-logo-2/512/amazon-512.png" alt="">
+                <img src="https://www.citypng.com/public/uploads/preview/hd-visa-payment-logo-png-7017516947777256ndfrewd52.png" alt="">
             </div>
         </div>
         <!-- agar user Debit card Select karta hai to uske card ki information lene ke liye card  -->
