--- a/view/listings/watchProduct.ejs
+++ b/view/listings/watchProduct.ejs
@@ -20,6 +20,12 @@
          </button>
         </a>
        </div>
+       <!-- Show all image of current product without user selection  (Start) -->
+        <!-- <div class="wtc-product_more_imagesContainer">
+            <img style="width: 200px; " src="https://images.unsplash.com/photo-1578587018452-892bacefd3f2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHNoaXJ0fGVufDB8fDB8fHww" alt="">           
+            <img style="width: 200px; " src="https://img.freepik.com/free-photo/vertical-shot-concentrated-businessman-listening-carefully-with-crossed-hands_181624-29443.jpg?ga=GA1.1.528019809.1739184205&semt=ais_hybrid&w=740" alt="">
+        </div> -->
+       <!-- Show all image of current product without user selection  (End) -->
     </div>
     <div data-aos="fade-up" data-aos-offset="20" data-aos-delay="10" data-aos-duration="500" class="wtc-productDescription">
         <p id="product_path">Home/Give the gift of the choice</p>
